<resources>
    <string name="app_name">My Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="inc">Inc. Alarm</string>
    <string name="alt">Altimeter</string>
    <string name="sav">Save Data</string>
    <string name="pro">Profile changer</string>
    <string name="set">Settings</string>
    <string name="mot">Motion Unlocker</string>
    <string name="title_activity_sav11">sav11</string>
    <string name="title_activity_sav12">sav12</string>
    <string name="current">CURRENT LIMIT</string>
    <string name="Cut">Cut off Time in Hours</string>
    <string name="Submit">Submit</string>
    <string name="title_activity_test">test</string>
    <string name="currentX">Current X</string>
    <string name="currentY">Current Y</string>
    <string name="currentZ">Current Z</string>
    <string name="maxX">Maximum X</string>
    <string name="maxY">Maximum Y</string>
    <string name="maxZ">Maximum Z</string>
    <string name="test">TEST</string>
    <string name="hello">HELLO</string>
    <string name="newlimit">New Cut off Limit</string>
    <string name="large">Large Text</string>
    <string name="current_time">Current time</string>
</resources>
