<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.zorawar.myapplication.test">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentX"
        android:id="@+id/currentX"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentY"
        android:id="@+id/currentY"
        android:layout_below="@+id/currentX"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentZ"
        android:id="@+id/currentZ"
        android:layout_below="@+id/currentY"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maxX"
        android:id="@+id/maxX"
        android:layout_marginBottom="185dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/maxY"
        android:layout_alignStart="@+id/maxY" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maxY"
        android:id="@+id/maxY"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_alignTop="@+id/maxX"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maxZ"
        android:id="@+id/maxZ"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_below="@+id/maxY"
        android:layout_alignLeft="@+id/maxY"
        android:layout_alignStart="@+id/maxY"
        android:layout_marginTop="51dp" />

</RelativeLayout>
